# Hackathon-Two

.claude/: settings.local.json
.specify/memory/: constitution.md
phase-1/: pyproject.toml
phase-1/history/prompts/cli-todo-app/: 001-create-spec.spec.prompt.md  002-create-plan.plan.prompt.md  003-create-tasks.tasks.prompt.md  004-implement.green.prompt.md
phase-1/specs/001-cli-todo-app/: plan.md  spec.md  tasks.md
phase-1/src/: __init__.py  __main__.py  main.py
phase-1/src/cli/: commands.py  menu.py  parser.py
phase-1/src/models/: __init__.py  task.py
phase-1/src/services/: __init__.py  task_service.py
phase-1/tests/integration/: test_cli.py
phase-1/tests/unit/: test_task.py  test_task_service.py
phase-1/todo_cli.egg-info/: PKG-INFO  entry_points.txt
phase-i/: pyproject.toml
phase-i/history/prompts/cli-todo-app/: 001-create-spec.spec.prompt.md  002-create-plan.plan.prompt.md  003-create-tasks.tasks.prompt.md  004-implement.green.prompt.md
phase-i/history/prompts/constitution/: 001-create-constitution.constitution.prompt.md
phase-i/specs/001-cli-todo-app/: plan.md  spec.md  tasks.md
phase-i/specs/001-cli-todo-app/checklists/: requirements.md
phase-i/src/: __init__.py  __main__.py  main.py
phase-i/src/cli/: commands.py  menu.py  parser.py
phase-i/src/models/: __init__.py  task.py
phase-i/src/services/: __init__.py  task_service.py
phase-i/tests/integration/: test_cli.py
phase-i/tests/unit/: test_task.py  test_task_service.py
todo_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+5 files in other folders)
